--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -195,8 +195,7 @@
     "links": [
       { "name": "HOME", "id": "home" },
       { "name": "ABOUT", "id": "about" },
-      { "name": "SERVICES", "id": "services" },
-      { "name": "FAQS", "id": "faqs" }
+      { "name": "SERVICES", "id": "services" }
     ]
   }
 }
